2004-10-17  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (pretty_id): Allocate space for ')' in uid and guid.

2004-10-17  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>
	    Christopher Faylor  <cgf@timesys.com>

	* cygcheck.cc (pretty_id): Allocate space for trailing '\0' in uid and
	guid.

2004-10-15  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>
	    Christopher Faylor  <cgf@timesys.com>

	* cygcheck.cc (pretty_id): Don't exit on id error.  Fix size
	calculations.

2004-10-14  Christopher Faylor  <cgf@timesys.com>
	    Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (pretty_id): Correct column calculations.  Abort if id is
	acting funny.

2004-10-10  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (add_path): Don't leak memory when path is already in
	``paths''.

2004-10-10  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (dump_sysinfo): Warn about trailing (back)slash on mount
	entries.

2004-10-10  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (dump_sysinfo): Don't warn about empty path components,
	just display ``.''.

2004-10-06  Corinna Vinschen  <corinna@vinschen.de>

	* strace.cc (_impure_ptr): Remove.

2004-10-06  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (dump_sysinfo): Warn about empty path components.

2004-10-04  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (pretty_id): Close pipe.

2004-09-23  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* dump_setup.cc (dump_setup): Remove unneeded strlen when check_files
	is not set.

2004-09-22  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>
	    Corinna Vinschen  <corinna@vinschen.de>

	* dump_setup.cc (dump_setup): Avoid trailing spaces on package-list.

2004-09-15  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* getfacl.c (main): Correct layout when nopt is set.

2004-07-12  Igor Pechtchanski  <pechtcha@cs.nyu.edu>
